557 - fix username wrap in the header

--- a/frontend/css/base/layout/_header.less
+++ b/frontend/css/base/layout/_header.less
@@ -159,8 +159,12 @@
 
 .b-headava__name{
   display: inline-block;
-  max-width: 120px;
+  max-width: 220px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+
+  @media screen and (max-width: 1200px){
+    max-width: 120px;
+  }
 }
